// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BlockedMemoriBadge for not enough credits unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right blocked-memori-badge--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      notEnoughCredits
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <div
        class="blocked-memori-badge--wrapper"
      >
        <div
          class="blocked-memori-badge "
        >
          <svg
            class="lucide lucide-triangle-alert blocked-memori-badge--icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders BlockedMemoriBadge unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right blocked-memori-badge--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      memoriBlockedAnon
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <div
        class="blocked-memori-badge--wrapper"
      >
        <div
          class="blocked-memori-badge "
        >
          <svg
            class="lucide lucide-triangle-alert blocked-memori-badge--icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders BlockedMemoriBadge with giver info unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right blocked-memori-badge--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      memoriBlockedUntil
       memoriBlockedReasonExceedChats
      <br />
      
memoriBlockedGiverHelper
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <div
        class="blocked-memori-badge--wrapper"
      >
        <div
          class="blocked-memori-badge "
        >
          <svg
            class="lucide lucide-triangle-alert blocked-memori-badge--icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders BlockedMemoriBadge with margin left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right blocked-memori-badge--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      memoriBlockedAnon
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <div
        class="blocked-memori-badge--wrapper"
      >
        <div
          class="blocked-memori-badge  margin-left"
        >
          <svg
            class="lucide lucide-triangle-alert blocked-memori-badge--icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders BlockedMemoriBadge with title unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right blocked-memori-badge--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      memoriBlockedAnon
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <div
        class="blocked-memori-badge--wrapper"
      >
        <div
          class="blocked-memori-badge "
        >
          <svg
            class="lucide lucide-triangle-alert blocked-memori-badge--icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <span
          class="blocked-memori-badge--title"
        >
          memoriBlockedTitle
        </span>
      </div>
    </div>
  </div>
</div>
`;
